--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,6 +53,9 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Get composer cache directory
+        run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
+
       - name: Cache composer dependencies
         uses: actions/cache@v3
         with:
@@ -110,6 +113,9 @@ jobs:
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       - uses: actions/checkout@v3
+
+      - name: Get composer cache directory
+        run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
       - name: Cache composer dependencies
         uses: actions/cache@v3
