--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "gettext/translator": "^1.0.1",
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.8.0",
+        "simplesamlphp/composer-module-installer": "^1.3.0",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0",
         "symfony/cache": "^5.4",
@@ -78,8 +79,7 @@
         "symfony/var-exporter": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/intl-extra": "^3.3",
-        "twig/twig": "^3.3.8",
-        "simplesamlphp/composer-module-installer": "^1.3.0"
+        "twig/twig": "^3.3.8"
     },
     "require-dev": {
         "ext-curl": "*",
@@ -108,5 +108,6 @@
             "simplesamlphp/composer-module-installer": true,
             "muglug/package-versions-56": true
         }
-    }
+    },
+    "version": "2.0.2"
 }
