Disable coverage on windows-tests; tests sometimes hang on this step

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -218,7 +218,7 @@ jobs:
           extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
           tools: composer:v2
           ini-values: error_reporting=E_ALL
-          coverage: xdebug
+          coverage: none
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
