--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -206,7 +206,7 @@ jobs:
       fail-fast: true
       matrix:
         operating-system: [windows-latest]
-        php-versions: ['8.0', '8.1', '8.2']
+        php-versions: ['7.4', '8.0', '8.1', '8.2']
 
     steps:
       - name: Setup PHP, with composer and extensions
