--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,9 +44,10 @@ jobs:
         # https://github.com/shivammathur/setup-php
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          # Should be the higest supported version, so we can use the newest tools
+          php-version: '8.2'
           tools: composer:v2
-          extensions: mbstring, xml
+          extensions: ctype, date, dom, hash, intl, json, mbstring, mysql, openssl, pcre, pdo, pdo_sqlite, spl, xml
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
@@ -105,8 +106,9 @@ jobs:
         # https://github.com/shivammathur/setup-php
         uses: shivammathur/setup-php@v2
         with:
+          # Should be the lowest supported version
           php-version: '8.0'
-          extensions: mbstring, xml
+          extensions: ctype, date, dom, hash, intl, json, mbstring, mysql, openssl, pcre, pdo, pdo_sqlite, spl, xml
           tools: composer:v2
           coverage: none
 
@@ -153,7 +155,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
+          extensions: ctype, date, dom, hash, intl, json, mbstring, mysql, openssl, pcre, pdo, pdo_sqlite, spl, xml
           tools: composer:v2
           ini-values: error_reporting=E_ALL
           coverage: xdebug
@@ -185,19 +187,19 @@ jobs:
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run unit tests with coverage
-        if: ${{ matrix.php-versions == '8.1' }}
+        if: ${{ matrix.php-versions == '8.2' }}
         run: vendor/bin/phpunit
 
       - name: Run unit tests (no coverage)
-        if: ${{ matrix.php-versions != '8.1' }}
+        if: ${{ matrix.php-versions != '8.2' }}
         run: vendor/bin/phpunit --no-coverage
 
       - name: Save coverage data
-        if: ${{ matrix.php-versions == '8.1' }}
+        if: ${{ matrix.php-versions == '8.2' }}
         uses: actions/upload-artifact@v3
         with:
           name: coverage-data
-          path: ${{ github.workspace }}/build
+          path: ${{ github.workspace }}
 
   unit-tests-windows:
     name: "Syntax and unit tests, PHP ${{ matrix.php-versions }}, ${{ matrix.operating-system }}"
@@ -215,7 +217,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
+          extensions: ctype, dom, date, hash, intl, json, mbstring, mysql, openssl, pcre, pdo, pdo_sqlite, spl, xml
           tools: composer:v2
           ini-values: error_reporting=E_ALL
           coverage: none
@@ -257,7 +259,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-data
-          path: ${{ github.workspace }}/build
+          path: ${{ github.workspace }}
 
       - name: Codecov
         uses: codecov/codecov-action@v3
