--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -48,6 +48,7 @@ jobs:
           php-version: '8.2'
           tools: composer:v2
           extensions: ctype, date, dom, hash, intl, json, mbstring, mysql, openssl, pcre, pdo, pdo_sqlite, spl, xml
+          coverage: none
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
