--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate
 
-      - name: Set version in composer.json
-        run: composer config version "$VERSION"
+      - name: Make sure a version is set in composer.json that matches the tag
+        if: $(composer config version) != "${{ env.VERSION }}"
+        run: exit 1
 
       - name: Install Composer dependencies
         run: composer install --no-progress --no-dev --prefer-dist --optimize-autoloader
