--- a/composer.json
+++ b/composer.json
@@ -45,14 +45,21 @@
     },
     "require": {
         "php": "^8.0",
+        "ext-curl": "*",
         "ext-date": "*",
         "ext-dom": "*",
+        "ext-fileinfo": "*",
+        "ext-filter": "*",
         "ext-hash": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-libxml": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
+        "ext-posix": "*",
         "ext-pcre": "*",
+        "ext-session": "*",
+        "ext-simplexml": "*",
         "ext-spl": "*",
         "ext-xml": "*",
 
@@ -60,9 +67,12 @@
         "gettext/gettext": "^5.6.1",
         "gettext/translator": "^1.0.1",
         "phpmailer/phpmailer": "^6.5",
+        "psr/log": "^2.0 || ^3.0",
+        "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0",
+        "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
         "symfony/cache": "^5.4||^6",
         "symfony/config": "^5.4||^6",
         "symfony/console": "^5.4||^6",
@@ -86,7 +96,6 @@
         "ext-pdo_sqlite": "*",
 
         "mikey179/vfsstream": "~1.6",
-        "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.1",
         "simplesamlphp/xml-security": "^1.6.0"
     },
