--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0",
-        "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
+        "simplesamlphp/simplesamlphp-module-adfs": "3.0.x-dev",
         "symfony/cache": "^5.4||^6",
         "symfony/config": "^5.4||^6",
         "symfony/console": "^5.4||^6",
@@ -110,6 +110,11 @@
             "composer/package-versions-deprecated": true,
             "simplesamlphp/composer-module-installer": true,
             "muglug/package-versions-56": true
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.0.x-dev"
         }
     }
 }
