--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,13 @@
 cert/.gitkeep export-ignore
 public/assets/.gitkeep export-ignore
 tools export-ignore
-tests export-ignore
+tests/Utils export-ignore
+tests/modules export-ignore
+tests/routers export-ignore
+tests/src export-ignore
+tests/www export-ignore
+tests/SigningTestCase.php export-ignore
+tests/bootstrap.php export-ignore
 codecov.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
