--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -77,8 +77,8 @@ jobs:
         continue-on-error: true
         run: composer-require-checker check --config-file=tools/composer-require-checker.json composer.json
 
-      - name: Check code for unused dependencies in composer.json
-        run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base
+      #- name: Check code for unused dependencies in composer.json
+      #  run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base
 
       - name: PHP Code Sniffer
         run: phpcs
