Add metadata.sign.algorithm to the config-template

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -1163,6 +1163,7 @@ $config = [
     'metadata.sign.privatekey' => null,
     'metadata.sign.privatekey_pass' => null,
     'metadata.sign.certificate' => null,
+    'metadata.sign.algorithm' => 'http://www.w3.org/2001/04/xmldsig-more#rsa-sha256',
 
 
     /****************************
