--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,10 +1,14 @@
 name: CI
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-    branches: [ '**' ]
+    branches: ['**']
+    paths-ignore:
+      - '**.md'
   pull_request:
-    branches: [ master, simplesamlphp-* ]
+    branches: [master, simplesamlphp-*]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   basic-tests:
