Fix incorrect parameter

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Check code for hard dependencies missing in composer.json
         continue-on-error: true
-        run: composer-require-checker check --config-file=tools/composer-require-checker.json composer.json
+        run: composer-require-checker check --config-file tools/composer-require-checker.json composer.json
 
       - name: Check code for unused dependencies in composer.json
         run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base
