--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "psr/log": "^2.0 || ^3.0",
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
-        "simplesamlphp/saml2": "5.0.0-alpha.4",
+        "simplesamlphp/saml2": "dev-master#ea6cfab8a41cb4d51808b623e4ec0e86ddb6cb74 as 5.0.0-alpha.5",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
         "symfony/cache": "^5.4||^6",
