--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "psr/log": "^2.0 || ^3.0",
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
-        "simplesamlphp/saml2": "dev-master#5c817c8caebd01b100dbb57450f12584ce15d30c as 5.0.0-alpha.5",
+        "simplesamlphp/saml2": "^5.0.0-alpha.5",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
         "symfony/cache": "^5.4||^6",
