feat: store authsources in a database
If parameters:

- 'authsources.storage' => 'database',
- 'authsources.database_table' => 'authsources',

are present into config/config.php

authsources are retrieved from database,
else them are retrieved from file

--- a/config/authsources.php.dist
+++ b/config/authsources.php.dist
@@ -5,14 +5,6 @@ use SimpleSAML\Database;
 
 define('AUTHSOURCES_DATABASE_TABLE', 'authsources');
 
-
-$config = [
-    'admin' => array(
-        'core:AdminPassword',
-    ),
-];
-
-
 $ssp_config = Configuration::getInstance();
 $authsources_storage = $ssp_config->getString('authsources.storage', 'file');
 
@@ -34,6 +26,16 @@ if($authsources_storage=='database') {
     $statement = $db->read("SELECT `id`, `entity_data` FROM `" . $authsources_database_table . "` WHERE `_disabled`='N'");
     $authsources = $statement->fetchAll();
     
+    $config = [
+        // This is a authentication source which handles admin authentication.
+        'admin' => [
+            // The default is to use core:AdminPassword, but it can be replaced with
+            // any authentication source.
+
+            'core:AdminPassword',
+        ],
+    ];
+
     // compile config
     foreach($authsources as $as) {
         $config[$as['id']] = json_decode($as['entity_data'], true);
