Revert "Drop dependency on posix"
This reverts commit 153d109daede7597e593e0e7fcc9a6ddd2660318.

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "ext-libxml": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
+        "ext-posix": "*",
         "ext-pcre": "*",
         "ext-session": "*",
         "ext-simplexml": "*",
