--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
         "ext-curl": "*",
         "ext-pdo_sqlite": "*",
         "mikey179/vfsstream": "~1.6",
-        "simplesamlphp/simplesamlphp-module-adfs": ">=2.0.0-rc5",
+        "simplesamlphp/simplesamlphp-module-adfs": ">=2.0.0",
         "simplesamlphp/simplesamlphp-test-framework": "^1.2.1",
         "simplesamlphp/xml-security": "^0.6.6"
     },
@@ -108,6 +108,5 @@
             "simplesamlphp/composer-module-installer": true,
             "muglug/package-versions-56": true
         }
-    },
-    "version": "2.0.4"
+    }
 }
