--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,18 +22,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Lint Code Base
-        uses: github/super-linter/slim@v5
-        env:
-          LOG_LEVEL: NOTICE
-          VALIDATE_ALL_CODEBASE: true
-          LINTER_RULES_PATH: 'tools/linters'
-          VALIDATE_CSS: true
-          VALIDATE_JAVASCRIPT_ES: true
-          VALIDATE_JSON: true
-          VALIDATE_PHP_BUILTIN: true
-          VALIDATE_YAML: true
-          VALIDATE_GITHUB_ACTIONS: true
+#      - name: Lint Code Base
+#        uses: github/super-linter/slim@v5
+#        env:
+#          LOG_LEVEL: NOTICE
+#          VALIDATE_ALL_CODEBASE: true
+#          LINTER_RULES_PATH: 'tools/linters'
+#          VALIDATE_CSS: true
+#          VALIDATE_JAVASCRIPT_ES: true
+#          VALIDATE_JSON: true
+#          VALIDATE_PHP_BUILTIN: true
+#          VALIDATE_YAML: true
+#          VALIDATE_GITHUB_ACTIONS: true
 
   quality:
     name: Quality control
