Build multiple tarballs

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,8 +49,11 @@ jobs:
         run: composer validate
 
       - name: Make sure a version is set in composer.json that matches the tag
-        if: $(composer config version) != "${{VERSION}}"
+        if: $(composer config version) != "${{ env.VERSION }}"
         run: |
+          echo "${{ env.VERSION }}"
+          echo "$VERSION"
+          echo $(composer config version)
           exit 1
 
       - name: Install Composer dependencies
